ws_warehouse/log/build_2025-10-02_11-04-53/tugbot_recorder/stderr.log
  File "/home/newin/Projects/warehouse/ws_warehouse/install/tugbot_recorder/lib/python3.10/site-packages/tugbot_recorder/recorder.py", line 194
    self.current_lidar = [round(r, 3) for r in msg.ranges[::10+]]
                                                               ^
SyntaxError: invalid syntax

